--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 server.port=8080
-application.name=DbServer
-server.options=-web -tcp -pg -baseDir w:\tools\data -trace
-spring.datasource.url=jdbc:h2:~/data/temp
+spring.application.name=DbServer
+server.options=-web -tcp -pg -baseDir ${user.home}/data -trace
+spring.datasource.url=jdbc:h2:${user.home}/data/BigQuery
+spring.datasource.username=sa
+spring.datasource.password=
 management.endpoints.web.exposure.include=*
 #management.endpoints.web.exposure.include=info,health,env
