--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8080
 spring.application.name=DbServer
-server.options=-web -tcp -pg -baseDir ${user.home}/data -trace
-spring.datasource.url=jdbc:h2:${user.home}/data/BigQuery
+h2.server.options=-web -tcp -pg -baseDir ${user.home}/data -trace
+h2.client.url=jdbc:h2:${user.home}/data/BigQuery
 spring.datasource.username=sa
 spring.datasource.password=
 management.endpoints.web.exposure.include=*
