--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,10 @@ server.port=8080
 spring.application.name=DbServer
 h2.server.options=-web -tcp -pg -baseDir ${user.home}/data -trace
 h2.client.url=jdbc:h2:${user.home}/data/BigQuery
+h2.client.init-sql[0]=CREATE SCHEMA IF NOT EXISTS AUDIT;
+h2.client.init-sql[1]=CREATE TABLE IF NOT EXISTS AUDIT.EVENTS (TDATE DATE NOT NULL, TSEQ INT NOT NULL, TSQUEMA VARCHAR NOT NULL, TTABLE VARCHAR NOT NULL, TACTION VARCHAR NOT NULL, PAYLOAD VARCHAR);
+h2.client.init-sql[2]=CREATE PRIMARY KEY IF NOT EXISTS PRIMARY_KEY ON AUDIT.EVENTS(TDATE, TSEQ);
+h2.client.init-sql[3]=CREATE INDEX IF NOT EXISTS QUALIFICATION ON AUDIT.EVENTS(TSQUEMA, TTABLE );
 spring.datasource.username=sa
 spring.datasource.password=
 management.endpoints.web.exposure.include=*
