--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.datasource.username=sa
 spring.datasource.password=
 management.endpoints.web.exposure.include=*
 #management.endpoints.web.exposure.include=info,health,env
+logging.level.ROOT=INFO
+logging.level.org.tayrona.dbserver=DEBUG
