11/05/2019 Rollback triggers & Audit enable/disable functions

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,12 +19,7 @@ h2.client.init-sql[1]=CREATE TABLE IF NOT EXISTS TIMER(ID IDENTITY PRIMARY KEY, 
 h2.client.init-sql[2]=MERGE INTO TIMER(ID, S_TIME) VALUES(1, LOCALTIME)
 h2.client.init-sql[3]=INSERT INTO TIMER(S_TIME, AN_ID, A_TIME, A_DATE, DATE_TIME, A_DECIMAL, A_DOUBLE, A_REAL, A_BIGINT) VALUES(LOCALTIME, RANDOM()*100, CURRENT_TIME, CURRENT_DATE, CURRENT_TIMESTAMP, RANDOM()*100, RANDOM()*100, RANDOM()*100, RANDOM()*100)
 h2.client.init-sql[4]=CREATE TRIGGER IF NOT EXISTS PUBLIC.INSERT_AUDIT AFTER INSERT ON PUBLIC.TIMER FOR EACH ROW CALL "org.tayrona.dbserver.audit.InsertTrigger"
-h2.client.init-sql[5]=CREATE TRIGGER IF NOT EXISTS PUBLIC.UPDATE_AUDIT AFTER UPDATE ON PUBLIC.TIMER FOR EACH ROW CALL "org.tayrona.dbserver.audit.UpdateTrigger"
-h2.client.init-sql[6]=CREATE TRIGGER IF NOT EXISTS PUBLIC.DELETE_AUDIT AFTER DELETE ON PUBLIC.TIMER FOR EACH ROW CALL "org.tayrona.dbserver.audit.DeleteTrigger"
-h2.client.init-sql[7]=CREATE TRIGGER IF NOT EXISTS PUBLIC.SELECT_AUDIT BEFORE SELECT ON PUBLIC.TIMER CALL "org.tayrona.dbserver.audit.SelectTrigger"
-h2.client.init-sql[8]=CREATE TRIGGER IF NOT EXISTS PUBLIC.TIMER_ROLLBACK_INSERT_AUDIT AFTER ROLLBACK, INSERT ON PUBLIC.TIMER FOR EACH ROW CALL "org.tayrona.dbserver.audit.RollbackTrigger"
-h2.client.init-sql[9]=CREATE TRIGGER IF NOT EXISTS PUBLIC.TIMER_ROLLBACK_UPDATE_AUDIT AFTER ROLLBACK, UPDATE ON PUBLIC.TIMER FOR EACH ROW CALL "org.tayrona.dbserver.audit.RollbackTrigger"
-h2.client.init-sql[10]=CREATE TRIGGER IF NOT EXISTS PUBLIC.TIMER_ROLLBACK_DELETE_AUDIT AFTER ROLLBACK, DELETE ON PUBLIC.TIMER FOR EACH ROW CALL "org.tayrona.dbserver.audit.RollbackTrigger"
+h2.client.init-sql[5]=CALL AUDIT_LOG_ENABLE('PUBLIC.TIMER')
 
 spring.datasource.username=sa
 spring.datasource.password=
