11/07/2019 Audit Initialize function & client configuration externalization

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,11 +9,30 @@ h2.audit.url=jdbc:h2:${user.home}/data/EventsDB
 h2.audit.init-sql[0]=CREATE SCHEMA IF NOT EXISTS AUDIT;
 h2.audit.init-sql[1]=CREATE TABLE IF NOT EXISTS AUDIT.EVENTS (TDAY INT NOT NULL, TSEQ INT NOT NULL, TCATALOG VARCHAR NOT NULL, TSQUEMA VARCHAR NOT NULL, TTABLE VARCHAR NOT NULL, TACTION VARCHAR NOT NULL, PAYLOAD VARCHAR, TTIMESTAMP TIMESTAMP DEFAULT CURRENT_TIMESTAMP NOT NULL);
 h2.audit.init-sql[2]=CREATE PRIMARY KEY IF NOT EXISTS PRIMARY_KEY ON AUDIT.EVENTS(TDAY, TSEQ);
-h2.audit.init-sql[3]=CREATE ALIAS IF NOT EXISTS AUDIT_LOG_ENABLE DETERMINISTIC FOR "org.tayrona.dbserver.audit.EnableLog.execute"
-h2.audit.init-sql[4]=CREATE ALIAS IF NOT EXISTS AUDIT_LOG_DISABLE DETERMINISTIC FOR "org.tayrona.dbserver.audit.DisableLog.execute"
+h2.audit.init-sql[3]=CREATE ALIAS IF NOT EXISTS AUDIT_INITIALIZE DETERMINISTIC FOR "org.tayrona.dbserver.audit.InitializeAudit.execute"
+h2.audit.init-sql[4]=CREATE ALIAS IF NOT EXISTS AUDIT_LOG_ENABLE DETERMINISTIC FOR "org.tayrona.dbserver.audit.EnableLog.execute"
+h2.audit.init-sql[5]=CREATE ALIAS IF NOT EXISTS AUDIT_LOG_DISABLE DETERMINISTIC FOR "org.tayrona.dbserver.audit.DisableLog.execute"
 #h2.audit.init-sql[5]=CREATE INDEX IF NOT EXISTS QUALIFICATION ON AUDIT.EVENTS(TCATALOG, TSQUEMA, TTABLE );
 
+h2.audit.trigger-create[0]=CREATE TRIGGER IF NOT EXISTS %s_INSERT_AUDIT AFTER INSERT ON PUBLIC.TIMER FOR EACH ROW CALL \"org.tayrona.dbserver.audit.InsertTrigger\"
+h2.audit.trigger-create[1]=CREATE TRIGGER IF NOT EXISTS %s_UPDATE_AUDIT AFTER UPDATE ON PUBLIC.TIMER FOR EACH ROW CALL \"org.tayrona.dbserver.audit.UpdateTrigger\"
+h2.audit.trigger-create[2]=CREATE TRIGGER IF NOT EXISTS %s_DELETE_AUDIT AFTER DELETE ON PUBLIC.TIMER FOR EACH ROW CALL \"org.tayrona.dbserver.audit.DeleteTrigger\"
+h2.audit.trigger-create[3]=CREATE TRIGGER IF NOT EXISTS %s_SELECT_AUDIT BEFORE SELECT ON PUBLIC.TIMER CALL \"org.tayrona.dbserver.audit.SelectTrigger\"
+h2.audit.trigger-create[4]=CREATE TRIGGER IF NOT EXISTS %s_ROLLBACK_INSERT_AUDIT AFTER ROLLBACK, INSERT ON PUBLIC.TIMER FOR EACH ROW CALL \"org.tayrona.dbserver.audit.RollbackTrigger\"
+h2.audit.trigger-create[5]=CREATE TRIGGER IF NOT EXISTS %s_ROLLBACK_UPDATE_AUDIT AFTER ROLLBACK, UPDATE ON PUBLIC.TIMER FOR EACH ROW CALL \"org.tayrona.dbserver.audit.RollbackTrigger\"
+h2.audit.trigger-create[6]=CREATE TRIGGER IF NOT EXISTS %s_ROLLBACK_DELETE_AUDIT AFTER ROLLBACK, DELETE ON PUBLIC.TIMER FOR EACH ROW CALL \"org.tayrona.dbserver.audit.RollbackTrigger\"
+
+h2.audit.trigger-drop[0]=DROP TRIGGER IF EXISTS %s_INSERT_AUDIT
+h2.audit.trigger-drop[1]=DROP TRIGGER IF EXISTS %s_UPDATE_AUDIT
+h2.audit.trigger-drop[2]=DROP TRIGGER IF EXISTS %s_DELETE_AUDIT
+h2.audit.trigger-drop[3]=DROP TRIGGER IF EXISTS %s_SELECT_AUDIT
+h2.audit.trigger-drop[4]=DROP TRIGGER IF EXISTS %s_ROLLBACK_INSERT_AUDIT
+h2.audit.trigger-drop[5]=DROP TRIGGER IF EXISTS %s_ROLLBACK_UPDATE_AUDIT
+h2.audit.trigger-drop[6]=DROP TRIGGER IF EXISTS %s_ROLLBACK_DELETE_AUDIT
+
 # Embedded Client configuration
+h2.client.interval=-1
+h2.client.initial-delay=1000
 h2.client.init-sql[0]=DROP TABLE TIMER IF EXISTS
 h2.client.init-sql[1]=CREATE TABLE IF NOT EXISTS TIMER(ID IDENTITY PRIMARY KEY, AN_ID INT, S_TIME VARCHAR(64), A_TIME TIME, A_DATE DATE, DATE_TIME TIMESTAMP, A_DECIMAL DECIMAL, A_DOUBLE DOUBLE, A_REAL REAL, A_BIGINT BIGINT)
 h2.client.init-sql[2]=MERGE INTO TIMER(ID, S_TIME) VALUES(1, LOCALTIME)
