--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,8 @@ h2.server.options=-web -tcp -pg -baseDir ${user.home}/data -trace
 
 # Audit Configuration
 h2.audit.url=jdbc:h2:${user.home}/data/EventsDB
+h2.audit.initial-delay=30000
+h2.audit.queue-latency=1000
 h2.audit.init-sql[0]=CREATE SCHEMA IF NOT EXISTS AUDIT;
 h2.audit.init-sql[1]=CREATE TABLE IF NOT EXISTS AUDIT.EVENTS (TDAY INT NOT NULL, TSEQ INT NOT NULL, TCATALOG VARCHAR NOT NULL, TSQUEMA VARCHAR NOT NULL, TTABLE VARCHAR NOT NULL, TACTION VARCHAR NOT NULL, PAYLOAD VARCHAR, TTIMESTAMP TIMESTAMP DEFAULT CURRENT_TIMESTAMP NOT NULL);
 h2.audit.init-sql[2]=CREATE PRIMARY KEY IF NOT EXISTS PRIMARY_KEY ON AUDIT.EVENTS(TDAY, TSEQ);
@@ -32,7 +34,7 @@ h2.audit.trigger-drop[6]=DROP TRIGGER IF EXISTS %s_ROLLBACK_DELETE_AUDIT
 
 # Embedded Client configuration
 h2.client.interval=-1
-h2.client.initial-delay=1000
+h2.client.initial-delay=60000
 h2.client.init-sql[0]=DROP TABLE TIMER IF EXISTS
 h2.client.init-sql[1]=CREATE TABLE IF NOT EXISTS TIMER(ID IDENTITY PRIMARY KEY, AN_ID INT, S_TIME VARCHAR(64), A_TIME TIME, A_DATE DATE, DATE_TIME TIMESTAMP, A_DECIMAL DECIMAL, A_DOUBLE DOUBLE, A_REAL REAL, A_BIGINT BIGINT)
 h2.client.init-sql[2]=MERGE INTO TIMER(ID, S_TIME) VALUES(1, LOCALTIME)
