--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,23 +2,24 @@ server.port=8080
 spring.application.name=DbServer
 
 # Embedded Server configuration
-h2.server.options=-web -tcp -pg -baseDir ${user.home}/data -trace
+#h2.server.options=-web -tcp -pg -baseDir ${user.home}/data -trace
+h2.server.options=-web -tcp -pg -baseDir ${user.home}/data
 h2.server.shutdown-delay=100
 
 # Audit Configuration
 h2.audit.catalog=EventsDB
 h2.audit.url=jdbc:h2:${user.home}/data/${h2.audit.catalog};TRACE_LEVEL_FILE=4
+#h2.audit.url=jdbc:h2:${user.home}/data/${h2.audit.catalog}
 h2.audit.shutdown-delay=0
 h2.audit.queue-latency=0
 h2.audit.init-sql[0]=CREATE SCHEMA IF NOT EXISTS AUDIT;
-h2.audit.init-sql[1]=CREATE TABLE IF NOT EXISTS AUDIT.EVENTS (TDAY INT NOT NULL, TSEQ INT NOT NULL, TCATALOG VARCHAR NOT NULL, TSQUEMA VARCHAR NOT NULL, TTABLE VARCHAR NOT NULL, TACTION VARCHAR NOT NULL, TUSER VARCHAR(64) NULL, PAYLOAD VARCHAR, TTIMESTAMP TIMESTAMP DEFAULT CURRENT_TIMESTAMP NOT NULL);
-h2.audit.init-sql[2]=CREATE PRIMARY KEY IF NOT EXISTS PRIMARY_KEY ON AUDIT.EVENTS(TDAY, TSEQ);
-h2.audit.init-sql[3]=CREATE ALIAS IF NOT EXISTS AUDIT_INITIALIZE FOR "org.tayrona.dbserver.audit.InitializeAudit.execute"
-h2.audit.init-sql[4]=CREATE ALIAS IF NOT EXISTS AUDIT_LOG_ENABLE FOR "org.tayrona.dbserver.audit.EnableLog.execute"
-h2.audit.init-sql[5]=CREATE ALIAS IF NOT EXISTS AUDIT_LOG_DISABLE FOR "org.tayrona.dbserver.audit.DisableLog.execute"
-#h2.audit.init-sql[6]=SET TRANSACTION ISOLATION LEVEL REPEATABLE READ
-#h2.audit.init-sql[7]=SET SESSION CHARACTERISTICS AS TRANSACTION ISOLATION LEVEL REPEATABLE READ
-#h2.audit.init-sql[8]=CREATE INDEX IF NOT EXISTS QUALIFICATION ON AUDIT.EVENTS(TCATALOG, TSQUEMA, TTABLE );
+h2.audit.init-sql[1]=CREATE TABLE IF NOT EXISTS AUDIT.EVENTS (TDAY INT NOT NULL, TSEQ INT NOT NULL, TCATALOG VARCHAR(64) NOT NULL, TSQUEMA VARCHAR(64) NOT NULL, TTABLE VARCHAR(64) NOT NULL, TACTION VARCHAR(32) NOT NULL, TUSER VARCHAR(64) NULL, PAYLOAD VARCHAR, TTIMESTAMP TIMESTAMP WITH TIME ZONE DEFAULT CURRENT_TIMESTAMP() NOT NULL,CONSTRAINT PK_AUDIT PRIMARY KEY (TDAY, TSEQ));
+h2.audit.init-sql[2]=CREATE ALIAS IF NOT EXISTS AUDIT_INITIALIZE FOR "org.tayrona.dbserver.audit.InitializeAudit.execute"
+h2.audit.init-sql[3]=CREATE ALIAS IF NOT EXISTS AUDIT_LOG_ENABLE FOR "org.tayrona.dbserver.audit.EnableLog.execute"
+h2.audit.init-sql[4]=CREATE ALIAS IF NOT EXISTS AUDIT_LOG_DISABLE FOR "org.tayrona.dbserver.audit.DisableLog.execute"
+#h2.audit.init-sql[5]=SET TRANSACTION ISOLATION LEVEL REPEATABLE READ
+#h2.audit.init-sql[6]=SET SESSION CHARACTERISTICS AS TRANSACTION ISOLATION LEVEL REPEATABLE READ
+#h2.audit.init-sql[7]=CREATE INDEX IF NOT EXISTS QUALIFICATION ON AUDIT.EVENTS(TCATALOG, TSQUEMA, TTABLE );
 
 h2.audit.trigger-create[0]=CREATE TRIGGER IF NOT EXISTS %1$s_INSERT_ROLLBACK_AUDIT AFTER INSERT, ROLLBACK ON %1$s FOR EACH ROW CALL \"org.tayrona.dbserver.audit.InsertTrigger\"
 h2.audit.trigger-create[1]=CREATE TRIGGER IF NOT EXISTS %1$s_UPDATE_ROLLBACK_AUDIT AFTER UPDATE, ROLLBACK ON %1$s FOR EACH ROW CALL \"org.tayrona.dbserver.audit.UpdateTrigger\"
