--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ h2.audit.url=jdbc:h2:${user.home}/data/${h2.audit.catalog};TRACE_LEVEL_FILE=4
 h2.audit.shutdown-delay=0
 h2.audit.queue-latency=0
 h2.audit.init-sql[0]=CREATE SCHEMA IF NOT EXISTS AUDIT;
-h2.audit.init-sql[1]=CREATE TABLE IF NOT EXISTS AUDIT.EVENTS (TDAY INT NOT NULL, TSEQ INT NOT NULL, TCATALOG VARCHAR(64) NOT NULL, TSQUEMA VARCHAR(64) NOT NULL, TTABLE VARCHAR(64) NOT NULL, TACTION VARCHAR(32) NOT NULL, TUSER VARCHAR(64) NULL, PAYLOAD VARCHAR, TTIMESTAMP TIMESTAMP WITH TIME ZONE DEFAULT CURRENT_TIMESTAMP() NOT NULL,CONSTRAINT PK_AUDIT PRIMARY KEY (TDAY, TSEQ));
+h2.audit.init-sql[1]=CREATE TABLE IF NOT EXISTS AUDIT.EVENTS (TDAY INT NOT NULL, TSEQ INT NOT NULL, TCATALOG VARCHAR(64) NOT NULL, TSQUEMA VARCHAR(64) NOT NULL, TTABLE VARCHAR(64) NOT NULL, TACTION VARCHAR(32) NOT NULL, TUSER VARCHAR(64) NULL, PAYLOAD VARCHAR, TTIMESTAMP TIMESTAMP WITH TIME ZONE DEFAULT CURRENT_TIMESTAMP() NOT NULL,CONSTRAINT PK_AUDIT_EVENTS PRIMARY KEY (TDAY, TSEQ));
 h2.audit.init-sql[2]=CREATE ALIAS IF NOT EXISTS AUDIT_INITIALIZE FOR "org.tayrona.dbserver.audit.InitializeAudit.execute"
 h2.audit.init-sql[3]=CREATE ALIAS IF NOT EXISTS AUDIT_LOG_ENABLE FOR "org.tayrona.dbserver.audit.EnableLog.execute"
 h2.audit.init-sql[4]=CREATE ALIAS IF NOT EXISTS AUDIT_LOG_DISABLE FOR "org.tayrona.dbserver.audit.DisableLog.execute"
